--- a/openengsb-daisy/src/main/java/org/outerj/daisy/repository/clientimpl/versioninfo.properties
+++ b/openengsb-daisy/src/main/java/org/outerj/daisy/repository/clientimpl/versioninfo.properties
@@ -1,3 +1,18 @@
+#   Copyright 2009 OpenEngSB Division, Vienna University of Technology
+#
+#   Licensed under the Apache License, Version 2.0 (the "License");
+#   you may not use this file except in compliance with the License.
+#   You may obtain a copy of the License at
+#
+#       http://www.apache.org/licenses/LICENSE-2.0
+#
+#   Unless required by applicable law or agreed to in writing, software
+#   distributed under the License is distributed on an "AS IS" BASIS,
+#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+#   See the License for the specific language governing permissions and
+#   limitations under the License.   
+
+
 #Daisy build & version info
 #Mon Jun 08 14:20:54 CEST 2009
 build.os.version=5.1
