--- a/openengsb-connector-issues-mantis/pom.xml
+++ b/openengsb-connector-issues-mantis/pom.xml
@@ -39,27 +39,16 @@
 		<dependency>
 			<groupId>org.apache.servicemix</groupId>
 			<artifactId>servicemix-shared</artifactId>
-			<version>${servicemix-version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.servicemix</groupId>
 			<artifactId>servicemix-core</artifactId>
-			<version>${servicemix-version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>dom4j</groupId>
-			<artifactId>dom4j</artifactId>
-		</dependency>
-		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
+			<version>4.4</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.axis</groupId>
@@ -76,17 +65,44 @@
 			<artifactId>commons-discovery</artifactId>
 			<version>20040218.194635</version>
 		</dependency>
-		 <dependency>
-      <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId>
-    </dependency>
-		
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+		</dependency>
+
 		<!-- Needed for issue with Axis fault 0 -->
 		<dependency>
 			<groupId>commons-httpclient</groupId>
 			<artifactId>commons-httpclient</artifactId>
 			<version>3.1</version>
 		</dependency>
+		<!-- Spring Dependencies -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-aop</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jms</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>dom4j</groupId>
+			<artifactId>dom4j</artifactId>
+		</dependency>
+
+
 
 
 	</dependencies>
@@ -98,8 +114,7 @@
 				<extensions>true</extensions>
 				<configuration>
 					<type>binding-component</type>
-					<bootstrap>org.openengsb.mantis.MyBootstrap</bootstrap>
-					<component>org.openengsb.mantis.MyComponent</component>
+					<component>org.openengsb.mantis.MantisComponent</component>
 				</configuration>
 			</plugin>
 			<plugin>
