--- a/openengsb-connector-issues-mantis/pom.xml
+++ b/openengsb-connector-issues-mantis/pom.xml
@@ -46,11 +46,6 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.4</version>
-		</dependency>
-		<dependency>
 			<groupId>org.apache.axis</groupId>
 			<artifactId>axis</artifactId>
 			<version>1.4</version>
@@ -88,6 +83,7 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -102,9 +98,24 @@
 			<artifactId>dom4j</artifactId>
 		</dependency>
 
-
-
-
+		<!-- Test dependencies -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-library</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>xmlunit</groupId>
+			<artifactId>xmlunit</artifactId>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
@@ -124,7 +135,7 @@
 				<executions>
 					<execution>
 						<configuration>
-							<namespace>http://org.openengsb.mantis/1.0</namespace>
+							<namespace>http://openengsb.org/mantis/1.0</namespace>
 						</configuration>
 						<goals>
 							<goal>mapping</goal>
