--- a/domains/issues/common/pom.xml
+++ b/domains/issues/common/pom.xml
@@ -45,6 +45,12 @@
       <groupId>org.openengsb</groupId>
       <artifactId>openengsb-workflow-domains</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.openengsb</groupId>
+      <artifactId>openengsb-workflow-drools-domains</artifactId>
+      <version>1.0.0-SNAPSHOT</version>
+    </dependency>
+    
 
     <!-- Springframework dependencies -->
     <dependency>
