--- a/openengsb-connector-issues-mantis/pom.xml
+++ b/openengsb-connector-issues-mantis/pom.xml
@@ -102,6 +102,7 @@
 		<dependency>
 			<groupId>org.openengsb</groupId>
 			<artifactId>openengsb-workflow-drools-domains</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
