--- a/domains/issues/mantis/service-engine/pom.xml
+++ b/domains/issues/mantis/service-engine/pom.xml
@@ -27,7 +27,7 @@
 	<groupId>org.openengsb</groupId>
 	<artifactId>openengsb-domains-issues-mantis-se</artifactId>
 	<packaging>jbi-component</packaging>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.0.0-SNAPSHOT</version>
 
 
 	<dependencies>
@@ -98,7 +98,11 @@
 			<artifactId>openengsb-workflow-drools-domains</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.openengsb</groupId>
+			<artifactId>openengsb-connector-issues-mantis</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
 		<dependency>
 			<groupId>org.openengsb</groupId>
 			<artifactId>openengsb-domains-issues-common</artifactId>
@@ -191,7 +195,7 @@
 				<extensions>true</extensions>
 				<configuration>
 					<type>service-engine</type>
-					<component>org.openengsb.MyComponent</component>
+					<component>org.openengsb.issues.mantis.IssueTrackerComponent</component>
 				</configuration>
 			</plugin>
 			<plugin>
